Clean env vars and update TrueVoice stream/public URLs

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_AZURACAST_BASE_URL=https://stream.truevoice.digital
-VITE_AZURACAST_STATION_SLUG=truevoice_digital
+VITE_TRUEVOICE_STREAM_URL=https://stream.truevoice.digital/listen/truevoice_digital/radio.mp3
+VITE_TRUEVOICE_PUBLIC_PAGE_URL=https://stream.truevoice.digital/public/truevoice_digital
 
