Launch: floating player + env-driven social links + footer icon visibility + uniform hero card heights

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 VITE_TRUEVOICE_STREAM_URL=https://stream.truevoice.digital/listen/truevoice_digital/radio.mp3
 VITE_TRUEVOICE_PUBLIC_PAGE_URL=https://stream.truevoice.digital/public/truevoice_digital
+VITE_TRUEVOICE_YOUTUBE_URL=https://www.youtube.com/channel/UCWpVof-rd5hs1xpchwj1MAQl
+VITE_TRUEVOICE_X_URL=https://x.com/TrueVoiceStream
+VITE_TRUEVOICE_INSTAGRAM_URL=https://www.instagram.com/truevoicedigital
 
